Moved the reset all button to the right hand side of the canvas instead of centered under the indicator windows 
Fixed: Don't show the ion indicator when only electrons are present
# 0.00.10 (45068) Oct 14, 2010
10/14/10 Published to dev with changes requested in recent team meeting.
Removed the "atom" and "ion" text readouts from the charge indicator
Added an "ion" readout near to the atom.
Changed the order of particles in the particle count legend to have electrons at the top
Temporarily removed game tab
Removed phet logo from single
# 0.00.09 (44920) Oct 9, 2010
Made it so that the first electron in the outer shell is more visible
Changed the number of electrons in the bucket from 11 to 10
Made fuzzy electron shell graphic pickable if visible and if it contains any electrons
Added cloud view for electron shells
# 0.00.08 (44901) Oct 8, 2010
10/8/10 Publishing new version for review by team.
Removed duplicate copy of max/min buttons 
Increased the size of the atom icon on the scale
Integrated the graphics NP provided for the scale and for the charge indicator
Increased the font of "Atom" and "Ion" in the charge indicator
# 0.00.07 (44886) Oct 7, 2010
Aligned the right sides of the readout windows
Made "Unstable" text color black instead of red
# 0.00.06 (44883) Oct 7, 2010
Fixed: Window readouts do not re-maximize on reset all
Added a circular gradient paint to the charge indicator meter background
Added a check mark for "Ion" text in the charge indicator, and made it red for positive and blue for negative
Moved the element name from the periodic table to above the nucleus
Made all non-selected elements in the periodic table the same color, instead of indicating the "buildable elements" in blue 
Added a red/gray nucleus dot in the mass indicator atom icon
Increased the size of the atom icon on the mass-indicator scale
Aligned readout windows
Made the electron orbitals more transparent
Capitalized window names
Improved font for window names