@@ -3,6 +3,7 @@ package edu.colorado.phet.buildanatom.view;
 import java.awt.*;
 
 import edu.colorado.phet.buildanatom.model.Atom;
+import edu.colorado.phet.common.phetcommon.model.BooleanProperty;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.umd.cs.piccolo.PNode;
@@ -16,7 +17,7 @@ public class ElementNameIndicator extends PNode {
     private final Atom atom;
     private final PText elementName;
 
-    public ElementNameIndicator( final Atom atom ) {
+    public ElementNameIndicator( final Atom atom, final BooleanProperty showLabels ) {
         this.atom = atom;
         elementName = new PText() {
             {
@@ -26,18 +27,15 @@ public class ElementNameIndicator extends PNode {
         };
         addChild( elementName );
 
-        atom.addObserver( new SimpleObserver() {
-
+        final SimpleObserver update = new SimpleObserver() {
             public void update() {
-                ElementNameIndicator.this.update();
+                elementName.setText( atom.getNumProtons() > 0 ? atom.getName() : " " );  // Can't set to a 0-length string or it can mess up layout in canvas.
+                elementName.setOffset( -elementName.getFullBoundsReference().width / 2, -elementName.getFullBoundsReference().height / 2 );
+                elementName.setVisible( showLabels.getValue() );
             }
-        } );
-
-        update();
-    }
-
-    public void update() {
-        elementName.setText( atom.getNumProtons() > 0 ? atom.getName() : " " );  // Can't set to a 0-length string or it can mess up layout in canvas.
-        elementName.setOffset( -elementName.getFullBoundsReference().width / 2, -elementName.getFullBoundsReference().height / 2 );
+        };
+        atom.addObserver( update );
+        showLabels.addObserver( update );
+        update.update();
     }
 }
