@@ -3,6 +3,7 @@ package edu.colorado.phet.buildanatom.view;
 import java.awt.*;
 
 import edu.colorado.phet.buildanatom.model.Atom;
+import edu.colorado.phet.common.phetcommon.model.BooleanProperty;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.umd.cs.piccolo.PNode;
@@ -13,17 +14,18 @@ import edu.umd.cs.piccolo.nodes.PText;
  */
 public class StabilityIndicator extends PNode {
 
-    public StabilityIndicator( final Atom atom ) {
-        addChild( new PText( "Unstable" ) {{
+    public StabilityIndicator( final Atom atom, final BooleanProperty showLabels ) {
+        addChild( new PText( "Unstable" ) {{//TODO: il8n
             setFont( new PhetFont( 18, true ) );
             setTextPaint( Color.black );
         }} );
         SimpleObserver updateVisibility = new SimpleObserver() {
             public void update() {
-                setVisible( !atom.isStable() );
+                setVisible( !atom.isStable() && showLabels.getValue() );
             }
         };
         atom.addObserver( updateVisibility );
+        showLabels.addObserver( updateVisibility );
         updateVisibility.update();
     }
 }
